--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1285,7 +1285,7 @@ section,
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-.hero {
+/* .hero {
   padding: 0;
 }
 
@@ -1447,7 +1447,95 @@ section,
 .hero .carousel-indicators li.active {
   opacity: 1;
   background: var(--accent-color);
+} */
+.hero {
+  padding: 0;
 }
+
+.bg-principal {
+  display: flex;
+  background-color: #5B3101; 
+  height: 100%; 
+}
+
+.hero .banner {
+  width: 100%;
+  min-height: 70vh;
+  background: url('../../assets/img/bg-banner.png') no-repeat center center/cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px;
+}
+
+.hero .banner-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 1200px;
+}
+
+.hero .logo img {
+  width: 500px;
+}
+
+.hero .text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero .text-content img {
+  width: 450px;
+  margin-bottom: 20px;
+}
+
+.hero .btn-get-started {
+  font-size: 24px;
+  padding: 10px 20px;
+  background-color: #c19a6b;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.hero .btn-get-started:hover {
+  background: color-mix(in srgb, var(--accent-color) 90%, white 15%);
+}
+
+@media (max-width: 1100px) {
+  .hero .banner-content {
+    flex-direction: column;
+    text-align: center;
+  }
+  .hero .logo img, .hero .text-content img {
+    width: 350px;
+  }
+
+  .hero .text-content img {
+    width: 300px;
+  }
+
+}
+
+@media (max-width: 768px) {
+
+  .hero .logo img, .hero .text-content img {
+    width: 250px;
+  }
+
+  .hero .btn-get-started {
+    font-size: 18px;
+    padding: 10px 20px;
+   
+  }
+
+}
+
+
 
 
 /*--------------------------------------------------------------
